[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/player/rightleg.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/leftleg.png" type="Texture" id=3]
[ext_resource path="res://assets/player/rightarm.png" type="Texture" id=4]
[ext_resource path="res://assets/player/torso.png" type="Texture" id=5]
[ext_resource path="res://assets/player/leftarm.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("rightarm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -44 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rightarm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("leftarm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -46.4595 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("leftarm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("rightleg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -41.9526 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("rightleg:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("leftleg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -41.4376 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("leftleg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("torso:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -38.3299 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("torso:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("rightarm:flip_h")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("rightleg:flip_h")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("leftleg:flip_h")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("torso:flip_h")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("leftarm:flip_h")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "WalkingLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("rightarm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -44 ), Vector2( -23.3085, -50.2996 ), Vector2( 0, -44 ), Vector2( 25.8284, -57.2292 ), Vector2( 0, -44 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rightarm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 30.5019, 0.0, -19.5513, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("leftarm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -46.4595 ), Vector2( 29.6081, -54.649 ), Vector2( 0, -46.4595 ), Vector2( -23.9385, -77.9576 ), Vector2( 0, -46.4595 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("leftarm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -36.5655, 0.0, 40.2134, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("rightleg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -41.9526 ), Vector2( -22.0486, -59.5915 ), Vector2( 0, -41.9526 ), Vector2( 25.8284, -31.2432 ), Vector2( 0, -41.9526 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("rightleg:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -34.0899, 0.0, 42.9704, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("leftleg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -41.4376 ), Vector2( 23.3085, -55.9266 ), Vector2( 0, -41.4376 ), Vector2( -21.4187, -43.9574 ), Vector2( 0, -41.4376 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("leftleg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 36.1993, 0.0, -35.9096, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("torso:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -38.3299 ), Vector2( 0, -47.7793 ), Vector2( 0, -38.3299 ), Vector2( 0, -47.7793 ), Vector2( 0, -38.3299 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("torso:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("rightarm:flip_h")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("rightleg:flip_h")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("leftleg:flip_h")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("torso:flip_h")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("leftarm:flip_h")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "WalkingRight"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("rightarm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -44 ), Vector2( -16.2444, -66.3753 ), Vector2( 0, -44 ), Vector2( 29.1533, -44.7816 ), Vector2( 0, -44 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rightarm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 18.6814, 0.0, -32.2439, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("leftarm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -46.4595 ), Vector2( 18.2987, -70.7183 ), Vector2( 0, -46.4595 ), Vector2( -32.3073, -54.3202 ), Vector2( 0, -46.4595 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("leftarm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.461, 0.0, 39.2572, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("rightleg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -41.9526 ), Vector2( -23.1249, -37.7158 ), Vector2( 0, -41.9526 ), Vector2( 26.4285, -55.1775 ), Vector2( 0, -41.9526 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("rightleg:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -33.8344, 0.0, 40.2474, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("leftleg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -41.4376 ), Vector2( 14.63, -44.7518 ), Vector2( 0, -41.4376 ), Vector2( -23.5969, -54.6625 ), Vector2( 0, -41.4376 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("leftleg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 23.3182, 0.0, -33.3326, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("torso:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -38.3299 ), Vector2( 0, -47.7793 ), Vector2( 0, -38.3299 ), Vector2( 0, -47.7793 ), Vector2( 0, -38.3299 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("torso:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("rightarm:flip_h")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("rightleg:flip_h")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("leftleg:flip_h")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("torso:flip_h")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("leftarm:flip_h")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 112.91 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 43, 19.9505 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2147483656
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -151.617, -244.851, -236.032, -161.067 ]
}

[node name="player" type="Sprite" parent="."]
position = Vector2( 0, -52.7811 )

[node name="rightarm" type="Sprite" parent="player"]
position = Vector2( 0, -44 )
texture = ExtResource( 4 )

[node name="rightleg" type="Sprite" parent="player"]
position = Vector2( 0, -41.9526 )
texture = ExtResource( 1 )

[node name="leftleg" type="Sprite" parent="player"]
position = Vector2( 0, -41.4376 )
texture = ExtResource( 3 )

[node name="torso" type="Sprite" parent="player"]
position = Vector2( 0, -38.3299 )
texture = ExtResource( 5 )

[node name="leftarm" type="Sprite" parent="player"]
position = Vector2( 0, -46.4595 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/WalkingLeft = SubResource( 2 )
anims/WalkingRight = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -116.391 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -379 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.12549, 1, 0, 1 )
position = Vector2( 0, -55.4366 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -54.3433 )
scale = Vector2( 1, 3 )
shape = SubResource( 5 )

[node name="LaunchDetector" type="Area2D" parent="."]
modulate = Color( 0.12549, 1, 0, 1 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaunchDetector"]
position = Vector2( 0, -19.8173 )
shape = SubResource( 5 )

[node name="JumperDetector" type="Area2D" parent="."]
modulate = Color( 0.12549, 1, 0, 1 )
position = Vector2( -0.561249, -205.007 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumperDetector"]
position = Vector2( 0, -19.8173 )
scale = Vector2( 0.7, 0.5 )
shape = SubResource( 5 )

[node name="bulletPos" type="Position2D" parent="."]
position = Vector2( 45.1882, -134.013 )

[node name="bulletPosL" type="Position2D" parent="."]
position = Vector2( -41.1039, -134.013 )
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="LaunchDetector" to="." method="_on_LaunchDetector_area_entered"]
[connection signal="area_entered" from="JumperDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="JumperDetector" to="." method="_on_JumperDetector_body_entered"]
